# HeliosOS

./: .cursorrules  .dockerignore  .env.example  .gcloudignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.competitive-intel  Dockerfile.mode-c  Dockerfile.mode-c-claude  Dockerfile.research-adk  Dockerfile.research-claude  Dockerfile.research-compare  Dockerfile.research-openai  EMAIL_SETUP_GUIDE.md  HELIOSCODE.md  JIRA.md  LICENSE  Makefile  ONBOARDING.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REPOSITORY_REVIEW.md  TERMINAL_USAGE_GUIDE.md  TEST_DRIVE_AGENT.md  agentic-loop-review.md  api_demo.sh  architecture-infra.drawio  architecture.drawio  cloudbuild.dashboard.yaml  cloudbuild.platform-api.yaml  competitive-intel-main.py  dev-stack.sh  docker-compose.yaml  forgeos-agentos-architecture.html  forgeos-agents.html  (+41 more)
.bagent/plans/: FORGEOS_IMPROVEMENT_PLAN.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  docker-publish.yml  pulumi-infra.yml
a2h/: README.md  pyproject.toml
a2h/a2h/: __init__.py  channels.py  gateway.py  models.py  server.py  store.py
a2h/tests/: test_protocol.py
agents/definitions/: toni.yaml
backend/: forgeos
config/: company-config.yaml
dashboard/: .env.local.bak  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
deploy/k8s/: README.md
docs/: REVIEW.md  adapters-guide.md  adk-vs-forgeos-comparison.md  agentic-loop-integration 2.md  agentic-loop-integration.md  drive-chat-agent-guide.md  forgeos-architecture-guide.html  forgeos-call-center.html  forgeos-use-case-flow.html  governance-code-trace.md  index.md  manifesto-summary.md  manifesto.md  platform-architecture.html  runtime-api-reference.md  runtime-kernel-architecture.md  treasury-demo.md
docs/architecture/: a2a-protocol.md  capability-tokens.md  checkpoints.md  kernel.md  overview.md  platform-layer.md  process-table.md  sdk-runtime.md  stack-adapters.md  syscall-pipeline.md  thin-client-migration.md  tool-enforcement.md
docs/development/: contributing.md  project-history.md
docs/diagrams/: forgeos-local-architecture.drawio  runtime-v2-architecture.drawio
docs/guides/: agent-tools.md  call-center-deployment.md  creating-agents.md  defining-agents.md  example-agents.md  google-cloud-deployment.md  quickstart.md  runtime-and-deployment.md  sdk-developer-guide.md  sdk.md
docs/operations/: deployment.md  mission-control.md
docs/protocols/: README.md  a2h-spec.md
docs/reference/: agent-manifest.md  api-endpoints.md  configuration.md
docs/runbooks/: README.md  db-recovery.md  incident-response.md
docs/security/: agent-mcp-security-analogy.drawio  agent-mcp-security-architecture.drawio  agent-mcp-security-compute-topology.drawio  agent-mcp-security-proposal.md
e2e/: .gitignore  global.setup.ts  global.teardown.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: base.fixture.ts
e2e/pages/: AdminChatPage.ts  AdminHealthPage.ts  AgentChatPage.ts  AgentDetailPage.ts  AgentsPage.ts  ApprovalsPage.ts  AuditPage.ts  BasePage.ts  ClientDetailPage.ts  ClientsPage.ts  CreateAgentPage.ts  EnvironmentDetailPage.ts  EnvironmentsPage.ts  IntelligencePage.ts  LoginPage.ts  OverviewPage.ts  SchedulerPage.ts  WorkflowsPage.ts
e2e/support/: api-seed.ts  route-intercepts.ts
examples/: README.md  cleanup.py  deploy.py  deploy_5_stack_agents.py  deploy_call_center.py  file_tracker_agent.py  full_platform_demo.py  run_all_hello_world.py  terminal_quickstart.py  test.py
examples/a2a/: ceo-supervisor.yaml  escalation-router.yaml  research-coordinator.yaml  (+1 more)
files/: andrej_karpathy.raw.wiki  dario_amodei.raw.wiki  sam_altman.raw.wiki
forgeos-cli/: Cargo.toml
forgeos-cli/src/: api.rs  config.rs  main.rs  manifest.rs  ui.rs
forgeos-cli/src/cmd/: answer.rs  approvals.rs  chat.rs  config.rs  credentials.rs  deploy.rs  describe.rs  health.rs  invoke.rs  list.rs  logs.rs  mod.rs  stop.rs  stub.rs  undeploy.rs  validate.rs
forgeos-lens-seed/: .gitignore  README.md
forgeos_web/: MIGRATION_STATUS.md  __init__.py  asgi.py  celery_app.py  celery_runtime.py  di.py  scheduling.py  settings.py  tasks.py  urls.py
infrastructure/: cloudbuild.dev.yaml  cloudbuild.platform-api.yaml  cloudbuild.pre.yaml  cloudbuild.promote.yaml  cloudbuild.release.yaml  deploy.sh
mission-control/: Makefile  README.md
observability/: README.md
pulumi/: EXECUTION_PLAN.md  LOCAL_PARITY_PLAN.md  LOCAL_VERIFICATION.md  Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.poc.yaml  Pulumi.pre.yaml  Pulumi.pro.yaml  Pulumi.yaml  README.md  __main__.py  gcp_stack.py  local_stack.py  requirements.txt
scripts/: build_oss.sh  deploy_all_agents.py  deploy_samples.py  mint_gws_token.py  provision_agent_sa.sh  set_treasury_folders.sh  setup-gcp-wif.sh  setup_drive_agent.sh
src/: __init__.py  bootstrap.py  celery_app.py  celery_runtime.py  tasks.py
stacks/: base.py
tests/: conftest.py  test_a2a.py  test_a2a_capability_and_contract.py  test_a2a_isolation.py  test_a2a_suspend.py  test_a2a_transport.py  test_a2h_protocol.py  test_adapter_suspend_matrix.py  test_adk_integration.py  test_admission_registers_contracts.py  test_agent_configs.py  test_agent_manifest_edit.py  test_agent_tool.py  test_alerts.py  test_anthropic_agent_adapter.py  test_anthropic_managed_adapter.py  test_api_auth.py  test_approval_rules.py  test_audit_log.py  test_auth_admin_key.py  test_callbacks.py  test_capability_store_shared.py  test_cascade_lifecycle.py  test_chaos_resilience.py  test_chat_resume_context.py  test_client_mcp_manager_isolation.py  test_cloud_services.py  test_conversation_manager.py  test_credentials_scoped.py  test_crewai_adk_kernel_gate.py  test_dealforge.py  test_email_tool_resend.py  test_environments_feature.py  test_fleet_monitor.py  test_forgeos_mcp.py  test_gcp_provisioning.py  test_h2a_protocol.py  test_hierarchical_policy.py  test_hitl_system.py  test_homeforge.py  (+68 more)
tools/: README.md  forgeos-mcp-server.py
vendor-wheels/: .gitkeep
(+1040 files in other folders)
