[project]
name = "forgeos"
version = "3.0.0"
description = "ForgeOS — Multi-stack AI agent platform. Deploy agents on ForgeOS, CrewAI, ADK, or OpenClaw."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.52",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
mcp = ["mcp>=1.0"]
all-providers = ["openai>=1.0", "mcp>=1.0"]
crewai = ["crewai>=0.80"]
adk = ["google-adk>=1.0"]
database = [
    "psycopg[binary,pool]>=3.2",
    "redis>=5.0",
]
gcp = [
    "google-cloud-sql-connector[pg8000]>=1.4",
    "google-cloud-secret-manager>=2.16",
    "google-cloud-logging>=3.5",
    "google-cloud-storage>=2.10",
    "firebase-admin>=6.0",
]
observability = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]
production = [
    "openai>=1.0",
    "mcp>=1.0",
    "psycopg[binary,pool]>=3.2",
    "redis>=5.0",
    "google-cloud-sql-connector[pg8000]>=1.4",
    "google-cloud-secret-manager>=2.16",
    "google-cloud-logging>=3.5",
    "google-cloud-storage>=2.10",
    "firebase-admin>=6.0",
    "stripe>=7.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
