[project]
name = "forgeos"
version = "3.1.0"
description = "ForgeOS — The agentic harness. Govern what your AI agents can do, on any framework, without changing their code."
license = "BUSL-1.1"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.52",
    "python-dotenv>=1.0",
    "google-auth>=2.0",
    "requests>=2.31",
    "httpx>=0.27",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
mcp = ["mcp>=1.0"]
all-providers = ["openai>=1.0", "mcp>=1.0"]
crewai = ["crewai>=0.80"]
adk = ["google-adk[extensions]>=1.29"]
scheduler = ["apscheduler>=3.10"]
database = [
    "psycopg[binary,pool]>=3.2",
    "redis>=5.0",
]
gcp = [
    "google-cloud-sql-connector[pg8000]>=1.4",
    "google-cloud-secret-manager>=2.16",
    "google-cloud-logging>=3.5",
    "google-cloud-storage>=2.10",
    "firebase-admin>=6.0",
]
observability = [
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]
production = [
    "openai>=1.0",
    "mcp>=1.0",
    "apscheduler>=3.10",
    "psycopg[binary,pool]>=3.2",
    "redis>=5.0",
    "google-cloud-sql-connector[pg8000]>=1.4",
    "google-cloud-secret-manager>=2.16",
    "google-cloud-logging>=3.5",
    "google-cloud-storage>=2.10",
    "firebase-admin>=6.0",
    "stripe>=7.0",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-awesome-pages-plugin>=2.9",
]

[project.scripts]
forgeos = "src.forgeos_sdk.cli:main"
forgeos-migrate = "src.core.migrations:main"
forgeos-mcp = "src.forgeos_mcp.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["kernel: requires ForgeOS kernel (proprietary)"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
