[project]
name = "forgeos"
version = "3.1.0"
description = "Helios OS — The agentic harness. Govern what your AI agents can do, on any framework, without changing their code."
license = "BUSL-1.1"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.52",
    "python-dotenv>=1.0",
    "google-auth>=2.0",
    "requests>=2.31",
    "httpx>=0.27",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
mcp = ["mcp>=1.2"]
all-providers = ["openai>=1.0", "mcp>=1.2"]
crewai = ["crewai>=0.80"]
adk = ["google-adk[extensions]>=1.29"]
scheduler = ["apscheduler>=3.10"]
database = [
    "psycopg[binary,pool]>=3.2",
    "redis>=5.0",
    "cryptography>=42.0",
]
# Django web layer (rewrite of the FastAPI app). 5.2+ is required for native
# CompositePrimaryKey support (several runtime/governance tables use composite
# PKs). Celery is the outer broker/scheduler; the inner src/runtime/ engine
# (RedisRunnableQueue + PostgresLedger) is retained per the migration design.
django = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "dj-database-url>=2.2",
    "pgvector>=0.3",
    "celery[redis]>=5.4",
    "django-celery-beat>=2.7",
]
gcp = [
    "google-cloud-sql-connector[pg8000]>=1.4",
    "google-cloud-secret-manager>=2.16",
    "google-cloud-logging>=3.5",
    "google-cloud-storage>=2.10",
    "firebase-admin>=6.0",
]
observability = [
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]
production = [
    "openai>=1.0",
    "mcp>=1.2",
    "apscheduler>=3.10",
    "psycopg[binary,pool]>=3.2",
    "redis>=5.0",
    "google-cloud-sql-connector[pg8000]>=1.4",
    "google-cloud-secret-manager>=2.16",
    "google-cloud-logging>=3.5",
    "google-cloud-storage>=2.10",
    "firebase-admin>=6.0",
    "stripe>=7.0",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    # Always-on tools notify__email / drive__audit_sharing resolve their GWS
    # OAuth creds from Secret Manager when not in env. Without this the local
    # dev install (`pip install -e ".[dev]"`) can't send email / audit Drive,
    # even with valid secrets + ADC. (Also in the gcp/production extras.)
    "google-cloud-secret-manager>=2.16",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-awesome-pages-plugin>=2.9",
]

[project.scripts]
forgeos = "src.forgeos_sdk.cli:main"
forgeos-migrate = "src.core.migrations:main"
# The MCP tool-execution layer lives in-repo under src/mcp/ (custom_tools,
# server_manager, tool_executor, client_mcp_manager, platform_tools). It is
# imported directly as src.mcp.* — no external forgeos_mcp package is required.

[tool.setuptools.packages.find]
# `src` is the platform library; `forgeos_web` is the Django/DRF project (its
# apps import the platform as `src.*`). Both are top-level packages.
include = ["src", "src.*", "forgeos_web", "forgeos_web.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["kernel: requires Helios OS kernel (proprietary)"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
