[package]
name = "forgeos"
version = "0.1.0"
edition = "2024"
description = "ForgeOS CLI — single static binary client for the ForgeOS Python platform"
license = "BUSL-1.1"

[[bin]]
name = "forgeos"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
colored = "2.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
